[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://assets/Enemies/Bat.gd" type="Script" id=10]
[ext_resource path="res://assets/Enemies/BatStats.gd" type="Script" id=11]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Enemies/Bat_eye.png" type="Texture" id=14]
[ext_resource path="res://assets/Audio/Enemies/Bat/Bat.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=17]

[sub_resource type="ShaderMaterial" id=23]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 14 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 14 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=36]
radius = 4.0

[sub_resource type="Animation" id=37]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=38]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=39]

[sub_resource type="CircleShape2D" id=18]
radius = 9.0

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="CircleShape2D" id=20]

[sub_resource type="CircleShape2D" id=21]
radius = 5.0

[sub_resource type="CircleShape2D" id=22]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16400
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 23 )
frames = SubResource( 29 )
animation = "fly"
offset = Vector2( 0, -12 )

[node name="AnimatedSpriteEye" type="AnimatedSprite" parent="AnimatedSprite"]
modulate = Color( 0, 0, 0, 1 )
frames = SubResource( 35 )
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 36 )

[node name="BatStats" parent="." instance=ExtResource( 4 )]
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/StartFlashing = SubResource( 37 )
anims/StopFlashing = SubResource( 38 )

[node name="Talkbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talkbox"]
position = Vector2( 0, -14 )
shape = SubResource( 39 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8
script = ExtResource( 17 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 18 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
scale = Vector2( 4, 4 )
shape = SubResource( 19 )

[node name="AttackController" parent="." instance=ExtResource( 13 )]

[node name="AttackPlayerZone" parent="." instance=ExtResource( 12 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AttackPlayerZone" index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 20 )

[node name="AttackTimer" type="Timer" parent="AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -3 )
collision_mask = 4
damage = 8.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 21 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="EnemyHealth" parent="." instance=ExtResource( 16 )]
visible = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 1, 2.75 )
rect = Rect2( -1, -1, 2, 8 )
__meta__ = {
"_editor_description_": "	"
}
[connection signal="no_health" from="BatStats" to="." method="_on_BatStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="AttackPlayerZone/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="AttackPlayerZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
